installation/kubernetes/master.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatsapp-master-service
  namespace: default
spec:
  clusterIP: None
  ports:
  - port: 6250
    targetPort: 6250
    protocol: TCP
    name: messaging
  - port: 6251
    targetPort: 6251
    protocol: TCP
    name: contacts
  - port: 6252
    targetPort: 6252
    protocol: TCP
    name: control
  - port: 6253
    targetPort: 6253
    protocol: TCP
    name: healthcheck
  selector:
    name: whatsapp-master
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatsapp-master-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      name: whatsapp-master
  template:
    metadata:
      labels:
        name: whatsapp-master
    spec:
      restartPolicy: "Always"
      containers:
      - name: whatsapp-master
        image: docker.whatsapp.biz/coreapp:2.33.4
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 128Mi
          requests:
            cpu: "0.15"
            memory: 128Mi
        ports:
        - containerPort: 6250
          protocol: TCP
          name: messaging
        - containerPort: 6251
          protocol: TCP
          name: contacts
        - containerPort: 6252
          protocol: TCP
          name: control
        - containerPort: 6253
          protocol: TCP
          name: healthcheck
        volumeMounts:
        - name: whatsapp-media
          mountPath: /usr/local/wamedia
        securityContext:
          capabilities:
            drop:
              - MKNOD
      volumes:
      - name: whatsapp-media
        persistentVolumeClaim:
          claimName: media-volume-claim
