installation/kubernetes/webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatsapp-web-service
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
    name: web
  selector:
    name: whatsapp-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whatsapp-web-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      name: whatsapp-web
  template:
    metadata:
      labels:
        name: whatsapp-web
    spec:
      restartPolicy: "Always"
      containers:
      - name: whatsapp-web
        image: docker.whatsapp.biz/web:v2.33.4
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory : 128Mi
          requests:
            cpu: "0.15"
            memory : 128Mi
        ports:
        - containerPort: 443
          protocol: TCP
          name: web
        volumeMounts:
        - name: whatsapp-media
          mountPath: /usr/local/wamedia
        securityContext:
          capabilities:
            drop:
              - MKNOD
      volumes:
      - name: whatsapp-media
        persistentVolumeClaim:
          claimName: media-volume-claim-1
